--- a/pom.xml
+++ b/pom.xml
@@ -71,4 +71,20 @@
         </plugins>
     </build>
 
+    <reporting>
+        <excludeDefaults>true</excludeDefaults>
+        <plugins>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <configuration>
+                    <reportVersion>2.8.0</reportVersion>
+                    <allureDownloadUrl>https://github.com/allure-framework/allure2/releases/download/%s/allure-%s.zip
+                    </allureDownloadUrl>
+                </configuration>
+                <version>2.8.0</version>
+            </plugin>
+        </plugins>
+    </reporting>
+
 </project>
